# LowkeyNW

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  appveyor.yml  license.md  package-info.json  package-info.json.in  readme.md
.github/workflows/: main.yml
docs/: gomodo.maxref.xml  gomodo.md  nw.cppan~.maxref.xml  nw.gateplus~.maxref.xml  nw.grainbang~.maxref.xml  nw.grainphase~.maxref.xml  nw.grainpulse~.maxref.xml  nw.grainstream~.maxref.xml  nw.gverb~.maxref.xml  nw.phasorshift~.maxref.xml  nw.pulsesamp~.maxref.xml  nw.recordplus~.maxref.xml  nw.trainshift~.maxref.xml
examples/: gate-comparison.maxpat  record-comparison.maxpat  time-stretch-demo.maxpat
extras/: LowkeyNW-Overview.maxpat
help/: NewGrain.maxhelp  gomodo.maxhelp  nw.cppan~.maxhelp  nw.cycle.maxhelp  nw.gateplus~.maxhelp  nw.grainbang~.maxhelp  nw.grainphase~.maxhelp  nw.grainpulse~.maxhelp  nw.grainstream~.maxhelp  nw.gverb~.maxhelp  nw.phasorshift~.maxhelp  nw.pulsesamp~.maxhelp  nw.randrange~.maxhelp  nw.recordplus~.maxhelp  nw.trainshift~.maxhelp  pitchlink.maxhelp
init/: nw-objectmappings.txt
javascript/: nw.cycle.js
media/grain_windows/: 3stage-linear_30.aiff  3stage-linear_50.aiff  blackman-harris.aiff  blackman.aiff  expodec.aiff  gauss.aiff  hamming.aiff  hanning.aiff  quasi-gauss_30.aiff  quasi-gauss_50.aiff  rexpodec.aiff  triangle.aiff
patchers/: buffer-scrub-demo.maxpat  gate-comparison.maxpat  granfile.pitch.maxpat  reverb-mix-demo.maxpat
patchers/gomodo/: nw.randrange~.maxpat
patchers/greequaincer/: grid_tests.maxpat  nw.flashgrid.js
patchers/max_for_live/: Gverb.amxd
patchers/module_demo/: readme.md
patchers/musiclinks/: reboot_notes.md  receive_test.amxd  scales.json  (+1 more)
source/: HowToBuild.md  Info.plist.in  max_extern_common.props
source/projects/nw.gverb_tilde/: CMakeLists.txt  nw.gverb_tilde.cpp  reverb_bb.cpp  reverb_bb.h
(+105 files in other folders)
